# jax-op-diff

./: .gitignore  README.md  README.zh.md  __init__.py  pyproject.toml  reporter.py
docs/: jax_lax_operators.json
ops/: __init__.py
python/jax_op_diff/: __main__.py  cli.py  config.py  core.py  dump_store.py  executor.py  op_registry.py  pipeline.py  reporter.py  runner.py
python/jax_op_diff/executor/: __init__.py  engine.py  metrics.py
python/jax_op_diff/ops/: all_ops.py
python/precision_test/: __main__.py  config.py  executor.py  op_registry.py
tests/: test_direct_dtype_comparison.py
tests/e2e/: test_pipeline.py
tests/integration/: test_direct_dtype_comparison.py  test_dump_store.py
tests/unit/: test_betainc_inputs.py  test_config.py  test_metrics.py  test_op_schema.py
